# FileCompression-Huffman

./: .gitignore  CMakeLists.txt  Makefile  README.md  WORKLIST.md
TextFiles/: BinaryFile.txt  FileToCompress.txt  HuffmanCompression.txt  HuffmanDecompression.txt  HuffmanDictionary.txt
binaires/: compressor
binaries/: compressor
documentation/: Doxyfile  config-doc
documentation/html/: _binary_file_8txt.html  _decoding_8c.html  _decoding_8c_source.html  _decoding_8h.html  _decoding_8h_source.html  _dictionary_8c.html  _dictionary_8c_source.html  _dictionary_8h.html  _dictionary_8h_source.html  _encoding_8c.html  _encoding_8c_source.html  _encoding_8h.html  _encoding_8h_source.html  _file_managment_8c.html  _file_managment_8c.js  _file_managment_8c_source.html  _file_managment_8h.html  _file_managment_8h.js  _file_managment_8h_source.html  _file_to_compress_8txt.html  _huffman_compression_8txt.html  _huffman_decompression_8txt.html  _huffman_dictionary_8txt.html  _huffman_tree_8c.html  _huffman_tree_8c_source.html  _huffman_tree_8h.html  _huffman_tree_8h_source.html  _linked_list_8c.html  _linked_list_8c_source.html  _linked_list_8h.html  _linked_list_8h_source.html  _menu_8c.html  _menu_8c_source.html  _menu_8h.html  _menu_8h_source.html  _queue_8c.html  _queue_8c_source.html  _queue_8h.html  _queue_8h_source.html  _r_e_a_d_m_e_8md.html  (+60 more)
include/: FileManagment.h
include/DataStructures/: File.h  LinkedList.h  Queue.h
include/Huffman/: Decoding.h  Dictionary.h  Encoding.h  HuffmanTree.h
sources/: FileManagment.c  main.c
tests/: tests.c  tests.h
(+85 files in other folders)
